# biomni-agent

./: Dockerfile.agent  openapi.yaml  pyproject.toml
.github/workflows/: build-and-push.yml
biomni_agent/: agent_config.json
biomni_agent/skills/biomni/: skill.yaml
biomni_agent/skills/biomni_agent/: skill.yaml
